exports[`test PlayerJoinButton renders as before 1`] = `
<Connect(Component)
  action={
    Object {
      "type": "PLAYER_JOIN",
    }
  }
  className="player-join-button"
  res="Join as player" />
`;

exports[`test TableJoinButton renders as before 1`] = `
<Connect(Component)
  action={
    Object {
      "type": "TABLE_JOIN",
    }
  }
  className="table-join-button"
  res="Join as table" />
`;
